Added descriptions, base for 2021 day 1 puzzle and renamed folders

--- a/package.json
+++ b/package.json
@@ -3,15 +3,13 @@
   "version": "1.0.0",
   "description": "https://adventofcode.com/",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/timlohse1104/adventofcode.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Tim Lohse",
   "license": "ISC",
   "type": "module",
   "bugs": {
@@ -19,3 +17,4 @@
   },
   "homepage": "https://github.com/timlohse1104/adventofcode#readme"
 }
+
