Added possibility to run all advent answers after each other and changed all solution.js to answer.ts files

--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "start": "deno run main.ts"
+    "start": "deno run --allow-read --allow-run main.ts"
   },
   "imports": {}
 }
